--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ModeReflexe"
+            android:label="@string/title_activity_mode_reflexe" >
+        </activity>
     </application>
 
 </manifest>
