--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="zm.shakethatphone" >
+    package="zm.shakethatphone"
+    >
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
+        <activity android:screenOrientation="portrait"
             android:name=".ShakeThatPhone"
             android:label="@string/app_name" >
         </activity>
-        <activity
+        <activity android:screenOrientation="portrait"
             android:name=".MainMenu"
             android:label="@string/app_name" >
             <intent-filter>
@@ -20,11 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
+        <activity android:screenOrientation="portrait"
             android:name=".ModeReflexe"
             android:label="@string/title_activity_mode_reflexe" >
         </activity>
-        <activity
+        <activity android:screenOrientation="portrait"
             android:name=".ModePuissance"
             android:label="@string/title_activity_mode_puissance" >
         </activity>
