--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,33 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="zm.shakethatphone"
-    >
+    package="zm.shakethatphone" >
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:screenOrientation="portrait"
-            android:name=".ShakeThatPhone"
-            android:label="@string/app_name" >
-        </activity>
-        <activity android:screenOrientation="portrait"
+        <activity
             android:name=".MainMenu"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:screenOrientation="portrait"
+        <activity
             android:name=".ModeReflexe"
-            android:label="@string/title_activity_mode_reflexe" >
+            android:label="@string/title_activity_mode_reflexe"
+            android:screenOrientation="portrait" >
         </activity>
-        <activity android:screenOrientation="portrait"
+        <activity
             android:name=".ModePuissance"
-            android:label="@string/title_activity_mode_puissance" >
+            android:label="@string/title_activity_mode_puissance"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".ModeSprint"
+            android:label="@string/title_activity_mode_sprint" >
+        </activity>
+        <activity
+            android:name=".ModeEndurance"
+            android:label="@string/title_activity_mode_endurance" >
         </activity>
     </application>
 
