--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         <activity
             android:name=".MainMenu"
             android:label="@string/app_name"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,26 +21,37 @@
         <activity
             android:name=".ModeReflexe"
             android:label="@string/title_activity_mode_reflexe"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".ModePuissance"
             android:label="@string/title_activity_mode_puissance"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".ModeSprint"
             android:label="@string/title_activity_mode_sprint"
-            android:screenOrientation="portrait">
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".ModeEndurance"
             android:label="@string/title_activity_mode_endurance"
-            android:screenOrientation="portrait">
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".ResultatPartie"
             android:label="@string/title_activity_resultat_partie"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".Profil"
+            android:label="@string/title_activity_profil"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:screenOrientation="portrait">
         </activity>
     </application>
