--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ local.properties
 
 # Android Studio
 .idea
-#.idea/workspace.xml - uncomment this and comment/delete .idea if it better suit your needs
+.idea/workspace.xml - uncomment this and comment/delete .idea if it better suit your needs
 .gradle
 /*/local.properties
 /*/out
