--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="zm.shakethatphone" >
+    package="zm.shakethatphone"
+    >
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon_shake_that_phone"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:debuggable="false">
         <activity
             android:name=".MainMenu"
             android:label="@string/app_name"
