--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     package="zm.shakethatphone"
     >
 
+    <uses-feature
+        android:name="android.hardware.sensor.gyroscope"
+        android:required="true" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon_shake_that_phone"
